# vsr

./: .gitignore  README.md  simple_test.json
Python/: .gitignore  README.md  vsr.py
Python/examples/: comprehensive_data_examples.json  flat_data.json
Python/tests/: run_tests.py  test_ascii_output.py  test_new_features.py  test_representation_config.py  test_terminal_resize.py  test_vsr.py
cpp/: .gitignore  CMakeLists.txt  README.md  build.bat  check_files.bat  debug_json.cpp  validate_code.ps1
cpp/include/: config_manager.h  data_loader.h  data_processor.h  display_manager.h  input_handler.h  json_custom_backup.hpp  utils.h  vsr_app.h
cpp/src/: config_manager.cpp  data_loader.cpp  data_processor.cpp  display_manager.cpp  input_handler.cpp  main.cpp  test_simple.cpp  utils.cpp  vsr_app.cpp
cpp/tests/: run_all_tests.cpp  test_data_loader.cpp  test_display.cpp  test_integration.cpp  test_utils.cpp
examples/: complex_data.json  large_user_data.json  multi_field_test.json  multiple_sets_data.json  nested_tree_data.json  sample_data.csv  slides_test_data.json
rep_saved/: 383a545a87c33d7d.json
